--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
-- 👋 Hi, I’m @huuvinhzZ
-- 👀 I’m interested in ...
-- 🌱 I’m currently learning ...
-- 💞️ I’m looking to collaborate on ...
-- 📫 How to reach me ...
-- 😄 Pronouns: ...
-- ⚡ Fun fact: ...
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chờ chuyển hướng</title>
+    <link rel="stylesheet" href="meta/css/styles.css">
+</head>
+<body>
+    <div class="container">
+        <div class="message">Chờ <span id="countdown">10</span> Giây Để Chuyển Hướng Sang Web Đích.</div>
+    </div>
+    <div class="copyright">
+      Copyright &copy; 2024 By V-TOOL.
+    </div>
 
-<!---
-huuvinhzZ/huuvinhzZ is a ✨ special ✨ repository because its `README.md` (this file) appears on your GitHub profile.
-You can click the Preview link to take a look at your changes.
---->
+    <script src="meta/js/script.js"></script>
+</body>
+</html>
